samples/_failures_safe/1761275559_379021_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_590d357e.c: In function ‘main’:
./samples/SAFE/__tmp_590d357e.c:180:5: error: expected expression at end of input
  180 |     uint8_t test_data[] = {0x41, 0x41, 0x41, 0x42, 0x42,
      |     ^~~~~~~
./samples/SAFE/__tmp_590d357e.c:180:5: error: expected declaration or statement at end of input
